# jinko-api-helpers-python

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  flake.nix  justfile  pyproject.toml  setup.py
.githooks/: pre-commit
.github/workflows/: ci.yml
crabbit/: __init__.py  __main__.py  cli.py  download.py  launcher.py  merge.py  utils.py  vpop.py
jinko_env/: lock.x86_64-linux.json  pyproject.toml
jinko_env_big/: lock.x86_64-linux.json  pyproject.toml
jinko_helpers/: __init__.py  __version__.py  calibration.py  jinko_helpers.py  model.py  trial.py  vpop.py
jinko_nn/dependencies/: dependency_checker.py
jinko_stats/: __init__.py
scripts/types/: generate-deprecations.sh  generate-types.sh
tests/: test_crabbit.py  test_jinko_helpers.py
tests/crabbit/: test_crabbit.py
tests/crabbit/data/: VpopDesign-A.json  VpopDesign-B.json  VpopDesign-C.json  VpopDesign-Cbis.json  VpopDesign-merged.json  csv-A.csv  csv-B.csv  csv-C.csv  csv-D.csv  csv-merged.csv  merged-vpop.json  small-vpop-3.json  small-vpop-5.json
tests/jinko_helpers/: test_calibration.py  test_data_table.py  test_jinko_helpers.py  test_model.py  test_trial.py
tests/jinko_stats/: test_sample_size.py
