[tool.poetry]
name = "jinko_api_helpers"
version = "0.1.0"
description = "Jinko API Documentation with Jupyter & Cookbook"
authors = ["SSE Team <oss@novainsilico.ai>"]
readme = "README.md"
packages = [{ include = "jinko_helpers" }]

[tool.poetry.dependencies]
python = ">=3.10"
black = {version = "^24.4.2"}
pandas = "^2.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
