[tool.poetry]
name = "jinko"
version = "0.3.2"
description = "A Python package containing jinko_helpers, jinko_stats, and crabbit modules aimed to be used with Jinko.ai API"
authors = ["SSE Team <oss@novainsilico.ai>"]
readme = "README.md"
packages = [
    { include = "jinko_helpers" }
    , { include = "jinko_stats" }
    , { include = "crabbit" }
    ]

[tool.poetry.dependencies]
python = ">=3.10"
black = {version = "^24.4.2"}
pandas = "^2.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
