[project]
# After modifying this file, run "nix run .#jinkoEnv.lock" from the root
# of the project to update lock.x86_64-linux.json
name = "jinko-sdk-with-tools"
version = "1.0.0"
dependencies = [
  "jinko-sdk @ file://..",
  "deepdiff",
  "black[jupyter]",
  "ipykernel",
  "jupyter",
  "jupyter-server",
  "jupyterlab",
  "odfpy",
  "kaleido<1.0.0",
  "matplotlib",
  "matplotlib-inline",
  "openpyxl",
  "pandas",
  "plotly",
  "seaborn",
  "scikit-learn",
  "scikit-survival",
  "lifelines",
  "numpy",
  "scipy",
  "ndtest @ git+https://github.com/syrte/ndtest.git",
  "plotnine==0.15.0a1",
  "bayesian-optimization",
  "libroadrunner",
  "modal-python",
  "openai",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.7.1%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=8f8b3cfc53010a4b4a3c7ecb88c212e9decc4f5eeb6af75c3c803937d2d60947",
  "gpytorch",
  "timedelta-isoformat",
  "python-calamine",
]
