[project]
# After modifying this file, run "nix run .#jinkoEnv.lock" from the root
# of the project to update lock.x86_64-linux.json
name = "jinko-sdk-with-tools"
version = "1.0.0"
dependencies = [
  "jinko-sdk @ file://..",
  "deepdiff",
  "black[jupyter]",
  "ipykernel",
  "isodate",
  "jupyter",
  "jupyter-server",
  "jupyterlab",
  "odfpy",
  "kaleido<1.0.0",
  "python-libsbml-experimental",
  "matplotlib",
  "matplotlib-inline",
  "openpyxl",
  "pandas",
  "plotly",
  "seaborn",
  "scikit-learn",
  "scikit-survival",
  "lifelines",
  "numpy",
  "scipy",
  "ndtest @ git+https://github.com/syrte/ndtest.git",
  "plotnine",
  "libroadrunner",
  "modal-python",
  "openai",
  "bayesian-optimization==2.0.4",
  "torch @ https://download.pytorch.org/whl/cpu/torch-2.9.0%2Bcpu-cp313-cp313-manylinux_2_28_x86_64.whl",
  "gpytorch",
  "timedelta-isoformat",
  "python-calamine",
  "sbmlxdf",
  "tellurium",
  "transformers",
  "freia",
  "langfuse",
  "vpop-calibration @ git+https://github.com/novainsilico/vpop-calibration",
  "google-genai",
  "python-dotenv",
  "pip",
  "shap",
]
