[project]
# After modifying this file, run "nix run .#jinkoEnvBig.lock" from the root
# of the project to update lock.x86_64-linux.json
name = "jinko-sdk-with-tools-big"
version = "1.0.0"
dependencies = [
  "jinko-sdk @ file://..",
  "jinko-sdk[jinko_nn]",
  "gpytorch",
  "deepdiff",
  "black[jupyter]",
  "ipykernel",
  "jupyter",
  "jupyter-server",
  "jupyterlab",
  "odfpy",
  "kaleido<1.0.0",
  "matplotlib",
  "pandas",
  "plotly",
  "seaborn",
  "scikit-learn",
  "scikit-survival",
  "lifelines",
  "numpy",
  "scipy",
  "ndtest @ git+https://github.com/syrte/ndtest.git",
  "plotnine==0.15.0a1",
  "bayesian-optimization",
  "libroadrunner",
  "modal-python",
  "openai"
]
